compiler-core/src/parse/snapshots/rakun_core__parse__tests__incomplete_function.snap
---
source: compiler-core/src/parse/tests.rs
expression: fn()
---
error: Syntax error
  ┌─ /src/parse/error.rakun:1:1
  │
1 │ fn()
  │ ^^^^ This function does not have a body
